namespace PhotoBook.Utilities
{
    public enum PageSize
    {
        Size15x21 = 315,
        Size23x31 = 713,
        Size30x42 = 1260
    }
}