namespace PhotoBook.Utilities
{
    public enum PhotoBookType
    {
        S,
        M,
        L
    }
}