namespace PhotoBook.Utilities
{
    public enum PhotoSize
    {
        Size9x13 = 117,
        Size10x15 = 130,
        Size13x18 = 234,
        Size15x20 = 300
    }
}