namespace PhotoBook.Utilities
{
    public enum PhotoType
    {
        JPG,
        PNG,
        GIF,
        TIFF,
        RAW,
        BMP
    }
}